Revert "Fix mobile lang switcher overlapping contact info"
This reverts commit 53b79397c385838ab4ea41114b27f9f5b7353dd1.

--- a/assets/style.css
+++ b/assets/style.css
@@ -36,10 +36,7 @@ body {
 @media (max-width: 480px) {
     .hide-mobile {
         display: none;
-    }
-    .lang-switch {
-        display: none;
-    }
+    }   
 }
 
 @media (min-width: 480px) {
@@ -85,7 +82,7 @@ body {
     .sidebar {
         position: static;
         width: 100%;
-        padding: 3em 1ch 1em;
+        padding: 1em 1ch;
         display: flex;
         flex-wrap: wrap;
         gap: 36px;
